--- a/f&r/style 1.css
+++ b/f&r/style 1.css
@@ -109,7 +109,7 @@ td img {
 table, th, td {
     border-collapse: collapse;
     padding: 1rem;
-    text-align: left;
+    text-align: center;
     border: 0.1px solid black;
 }
 
