--- a/f&r/style.css
+++ b/f&r/style.css
@@ -27,7 +27,7 @@ justify-content: center;
     margin-bottom: 30px;
     
 }
-.form-element input,.radio-buttons .radio-input { 
+.form-element input,.radio-buttons .radio-input ,.input-span{ 
 
     width: 100%;
 }
@@ -39,7 +39,7 @@ justify-content: center;
 span{
 margin-bottom:10px;
 }
-.container input, textarea {
+.container input, textarea ,.input-span{
     border: 1px solid #d0d2e2;
     line-height: 2; 
     padding: 5px; 
@@ -322,6 +322,19 @@ font-weight: bold;
     line-height: 2; 
     padding: 5px; 
     border-radius: 5px;
+   }
+   
+   .span-in-place{
+    margin-top: -43px;
+    margin-left: 5px;
+    
+    font-weight:lighter;
+    color: grey;
+    font-size: small;
+  
+   }
+   .input-span{
+background-color: white;
    }
 
   @media (max-width: 1000px) {
