--- a/f&r/style.css
+++ b/f&r/style.css
@@ -40,7 +40,7 @@ justify-content: center;
 span{
 margin-bottom:10px;
 }
-.container input, textarea ,.input-span{
+.container input, textarea ,.input-span,.form-element-response select{
     border: 1px solid #d0d2e2;
     line-height: 2; 
     padding: 5px; 
