--- a/f&r/style.css
+++ b/f&r/style.css
@@ -358,24 +358,33 @@ color: #000;
 text-align: center;
   }
 .notification{
-  width: 70%;
+  height: 50%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 10px;
   padding: 10px;
 }
+.left-com{
+width: 50%;
+}
 .up-companies{
-  width: 30%;
-  height:100%;
+  width: 100%;
+  height:50%;
   display: flex;
   flex-direction: column;
   gap: 10px;
   padding: 10px;
+ 
+}
+.com-table :nth-child(2){
+  overflow: scroll;
 }
 .up-companies table, .up-companies th, .up-companies td {
   border: 0px;
   
 }
+
   @media (max-width: 1000px) {
 body{
   height: 100vh;
@@ -415,6 +424,9 @@ margin-bottom: 20px;
       flex-direction: column;
 
     }
+    .left-com{
+      width: 100%;
+      }
     .notification{
       width: 100%;
       height: 50vh;
