--- a/f&r/style.css
+++ b/f&r/style.css
@@ -371,14 +371,20 @@ width: 50%;
 .up-companies{
   width: 100%;
   height:50%;
+  overflow: visible;
   display: flex;
   flex-direction: column;
   gap: 10px;
   padding: 10px;
  
 }
-.com-table :nth-child(2){
+.up-companies .com-table{
+  height: 100%;
   overflow: scroll;
+  
+}
+.up-companies .com-table::-webkit-scrollbar{
+display: none;
 }
 .up-companies table, .up-companies th, .up-companies td {
   border: 0px;
