--- a/f&r/style.css
+++ b/f&r/style.css
@@ -5,7 +5,7 @@
 
 body {
 font-family: 'Inter';
-
+z-index: 1000;
 }
 form {
 background: white;
@@ -512,6 +512,32 @@ justify-content: center;
   -webkit-animation-play-state: paused;
   
 }
-.input-group input{
+.internetstatus-box{
+  z-index: 1100;
+  position: fixed;
+  display: none;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+padding: 20px;
+transition: ease-in-out;
+}
+.internetstatus{
 
+  width: 200px;
+  height: 50px;
+  background-color: #000;
+  color: #f1f1f1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+border-top-style: solid;
+border-top-width: 5px;
+}
+.internetstatus.online{
+  border-top-color: green;
+}
+.internetstatus.offline{
+  border-top-color: red;
 }
