--- a/f&r/style.css
+++ b/f&r/style.css
@@ -541,3 +541,13 @@ border-top-width: 5px;
 .internetstatus.offline{
   border-top-color: red;
 }
+.table__body span{
+  font-weight: bold;
+height: 50px;
+
+}
+
+.table__body table{
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
