--- a/f&r/style.css
+++ b/f&r/style.css
@@ -367,6 +367,7 @@ text-align: center;
 }
 .left-com{
 width: 50%;
+height: 100%;
 }
 .up-companies{
   width: 100%;
@@ -564,4 +565,11 @@ height: 50px;
 }
 .pro-img{
   object-fit: cover;
+}
+.charts{
+  display: flex;
+  flex-direction:  row;
+  width: 100%;
+  height: 30%;
+  overflow: scroll;
 }
