--- a/f&r/style.css
+++ b/f&r/style.css
@@ -584,3 +584,87 @@ height: 50px;
   text-align: center;
   font-weight: bold;
 }
+.company-list{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 50px;
+}
+.company{
+  width: 350px;
+  height: 400px;
+margin-bottom: 30px;
+margin-left: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+
+}
+.com-logo{
+  width: 90%;
+  height: 150px;
+  padding: 10px;
+  background-color: aliceblue;
+  border-radius: 15px;
+  border-bottom-left-radius: 0px;
+border-bottom-right-radius: 0px;
+}
+.com-logo img{ 
+width: 100%;
+height: 100%;
+object-fit: contain;
+}
+.com-status{
+  height: auto;
+  width: 110%;
+background-color: aquamarine;
+padding: 5px;
+border-radius: 20px;
+
+z-index: 200;
+}
+.com-details{
+  padding-top: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: #182d8b;
+  border-radius: 15px;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
+  box-shadow: 5px 5px 10px 1px #000000;
+  margin-top: -20px;
+  width: 100%;
+  min-height: 250px;
+  height: 250px;
+z-index: 100;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: aliceblue;
+  gap: 10px;
+  overflow:visible
+}
+.com-btn{
+  z-index: 200;
+  display: flex;
+  width: 150px;
+  gap: 20px;
+  height: 50px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 20px;
+  background-color: aqua;
+  margin-top: -30px;
+  margin-bottom: -30px;
+  padding: 10px;
+}
+.com-inn{
+  height: auto;
+max-height: 200px;
+
+}
